Update to lib for new GWT-DND